# Arcana

./: .gitignore  README.md  agents.md  docker-compose.yml  nginx.conf  package-lock.json
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/agents/00-index/: CONTEXT.md  GLOSSARY.md  PROPOSAL.md  QUALITY_BARS.md  RULES.md
backend/agents/10-prd/: PRD-EPIC-001-arcana-mvp.md
backend/agents/20-trd/: TRD-EPIC-001-arcana-mvp.md
backend/agents/30-design/: DESIGN-EPIC-001-arcana-mvp.md
backend/agents/40-stories/: US-001.1-notion-initial-sync.md  US-001.1-회원가입.md  US-001.2-로그인.md  US-001.3-액세스토큰재갱신.md  US-002.1-노션연동.md  US-002.2-노션토큰자동재발급.md  US-002.3-노션RAG적재.md  US-002.4-워크스페이스RAG스토리지메타.md  US-003.1-워크스페이스RAG검색.md  US-003.2-워크스페이스AI에이전트오케스트레이션.md  US-003.3-사용자외부도구연동현황.md  US-003.4-구글드라이브RAG동기화.md  US-003.5-구글드라이브PDF다운로드.md  US-003.6-구글드라이브OpenXML서식보존.md  US-004.1-프런트엔드토큰재발급시나리오.md  US-004.2-대시보드우선-연동후동기화.md  US-005.1-연동후자동갱신.md  US-006.1-마이페이지-로그아웃-탈퇴.md  US-006.2-대시보드채팅로딩지속.md  US-006.3-대시보드채팅응답복원.md  US-006.4-대시보드채팅백그라운드재시도.md  US-006.5-대시보드채팅응답노출.md
backend/agents/50-Coding-Convention/: plan.md
backend/agents/50-tasks/: TASK-005.1-db스키마.md  (+49 more)
backend/ai_module/: LANGGRAPH.md  __init__.py  ai_config.py  chat.py  decision.py  document_generation.py  final_answer.py  orchestrator.py  rag_search.py
backend/dependencies/: __init__.py  auth.py
backend/docs/: rag_search_pipeline.md
backend/google_drive/: __init__.py  auth.py  change_stream.py  files.py  googleDrive.py
backend/local/: local.py  local__host.html
backend/models/: __init__.py  entities.py
backend/notions/: __init__.py  notion.py  notionAuth.py  notionCreate.py  notionPreprocess.py  notionPull.py  ragTransform.py  renderer.py  sample_pages.jsonl
backend/rag/: __init__.py  chroma.py
backend/routers/: __init__.py  aiagent.py  google_drive.py  notion.py  users.py
backend/schema/: aiagent.py  users.py
backend/utils/: auth.py  db.py  workspace.py  workspace_storage.py
(+33 files in other folders)
