[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "notion-client>=2.5.0",
    "pydantic[email]>=2.11.9",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]
