[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi[all]>=0.117.1",
    "httpx>=0.28.1",
    "notion-client>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic[email]>=2.11.9",
    "pymysql>=1.1.2",
    "chromadb>=0.5.3",  # Chroma 벡터 스토어 사용을 위한 의존성 주석
    "langchain-core>=0.3.7",  # LangChain 핵심 타입을 위한 의존성 주석
    "langchain-community>=0.3.6",  # LangChain 커뮤니티 모듈(Chroma 래퍼) 의존성 주석
    "langchain-openai>=0.2.5",  # OpenAI 임베딩을 위한 LangChain 어댑터 의존성 주석
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]
