[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi[all]>=0.117.1",
    "httpx>=0.28.1",
    "notion-client>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic[email]>=2.11.9",
    "pyhwp>=0.1b15",
    "pymysql>=1.1.2",
    "chromadb>=0.5.6,<0.6.0",
    "langchain-core>=0.3.7",
    "langchain-chroma>=0.1.4,<0.2.0",
    "langchain-openai>=0.2.5",
    "langgraph>=0.2.32",
    "rank-bm25>=0.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]
